src/snapshots/cronexpr__parser__tests__parse_crontab_success-8.snap
---
source: src/parser.rs
expression: "parse_crontab(\"1-30/2 1 1 1 * Asia/Shanghai\").unwrap()"
---
Crontab {
    minutes: PossibleLiterals {
        values: {
            1,
            3,
            5,
            7,
            9,
            11,
            13,
            15,
            17,
            19,
            21,
            23,
            25,
            27,
            29,
        },
    },
    hours: PossibleLiterals {
        values: {
            1,
        },
    },
    months: PossibleLiterals {
        values: {
            1,
        },
    },
    days_of_month: PossibleLiterals {
        values: {
            1,
        },
    },
    days_of_week: PossibleLiterals {
        values: {
            1,
            2,
            3,
            4,
            5,
            6,
            7,
        },
    },
    timezone: TimeZone(
        TZif(
            "Asia/Shanghai",
        ),
    ),
}
